--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,3 @@
-<nav class="nav justify-content-center">
-  {% for item in site.data.navigation %}
-    <a class="nav-link" href="{{ item.link }}">{{ item.name }}</a>
-  {% endfor %}
+<nav class="navbar navbar-light bg-light">
+    <a class="nav-link" href="/">Home</a>
 </nav>
