--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-light bg-light">
-    <a class="nav-link" href="/">Home</a>
+<nav class="nav">
+    <a class="nav-link pl-0" href="/">Home</a>
 </nav>
