--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
-<nav class="nav">
-    <a class="nav-link pl-0" href="/">Home</a>
+<nav class="nav px-0">
+    <a class="nav-link px-0" href="/">Home</a>
 </nav>
