--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,13 @@
   <body>
     <!-- Include navigation bar for all pages except home page -->
     {% if page.url != "/" %}
-      <div class="container w-50 my-3">
+      <div class="container-md w-50 my-3">
         {% include navigation.html %}
       </div>
     {% endif %}
 
     <!-- Include content -->
-    <div class="container w-50">
+    <div class="container-md w-50">
       {{ content }}
     </div>
   </body>
