--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,13 @@
-<nav class="nav px-0">
-    <a class="nav-link px-0" href="/">Home</a>
+<nav class="navbar">
+    <a class="navbar-brand" href="/">Navbar</a>
+
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+        </li>
+        
+        <li class="nav-item">
+            <a class="nav-link pe-0" href="/">Index</a>
+        </li>
+    </ul>
 </nav>
